k8s-deployments/auth-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: mern-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth-container
          image: 466825169909.dkr.ecr.ap-south-1.amazonaws.com/auth-service:latest
          ports:
            - containerPort: 5001
