k8s-deployments/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: mern-dev
spec:
  selector:
    app: auth
  ports:
    - port: 5001
      targetPort: 5001
  type: ClusterIP
